Upgrade back to Java 21 and JavaFX 23 as requested
Co-authored-by: antipro <2208595+antipro@users.noreply.github.com>