@@ -176,7 +176,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 
         forwardBiasProperty().addListener(observable -> {
             if (control.getWidth() > 0) {
-                Text textNode = (Text)((TextFlow) paragraphNodes.getChildren().get(0)).getChildren().get(0);
+                Text textNode = (Text)((TextFlow) paragraphNodes.getChildren().getFirst()).getChildren().getFirst();
                 updateTextNodeCaretPos(control.getCaretPosition(), textNode);
             }
         });
@@ -385,7 +385,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 //                                    continue;
 //                                }
                                 paragraphNode.getChildren().addAll(texts);
-//                                Text paragraphNode = (Text) textFlow.getChildren().get(0);
+//                                Text paragraphNode = (Text) textFlow.getChildren().getFirst();
 //                                paragraphNode.setText(change.getList().get(i).toString());
 //                                Node node = paragraphNodes.getChildren().get(i);
 //                                Text paragraphNode = (Text) node;
@@ -404,13 +404,13 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
             });
 //            registerInvalidationListener(control.textProperty(), e -> {
 //                invalidateMetrics();
-////                ((Text)paragraphNodes.getChildren().get(0)).setText(control.textProperty().getValueSafe());
+////                ((Text)paragraphNodes.getChildren().getFirst()).setText(control.textProperty().getValueSafe());
 //                contentView.requestLayout();
 //            });
         } else {
             registerInvalidationListener(control.textProperty(), e -> {
                 invalidateMetrics();
-                ((Text)paragraphNodes.getChildren().get(0)).setText(control.textProperty().getValueSafe());
+                ((Text)paragraphNodes.getChildren().getFirst()).setText(control.textProperty().getValueSafe());
                 contentView.requestLayout();
             });
         }
@@ -1197,8 +1197,8 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 
     /** {@inheritDoc} */
     @Override public double computeBaselineOffset(double topInset, double rightInset, double bottomInset, double leftInset) {
-        TextFlow firstFlow = (TextFlow) paragraphNodes.getChildren().get(0);
-        Text firstParagraph = (Text) firstFlow.getChildren().get(0);
+        TextFlow firstFlow = (TextFlow) paragraphNodes.getChildren().getFirst();
+        Text firstParagraph = (Text) firstFlow.getChildren().getFirst();
         return Utils.getAscent(getSkinnable().getFont(), firstParagraph.getBoundsType())
                 + contentView.snappedTopInset() + codeArea.snappedTopInset();
     }
@@ -1248,7 +1248,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
         if (n > 0) {
             if (y < contentView.snappedTopInset()) {
                 // Select the character at x in the first row
-//                Text paragraphNode = (Text)paragraphNodes.getChildren().get(0);
+//                Text paragraphNode = (Text)paragraphNodes.getChildren().getFirst();
                 Text paragraphNode = getTextNode(x, y);
                 index = getNextInsertionPoint(paragraphNode, x, -1, VerticalDirection.DOWN);
             } else if (y > contentView.snappedTopInset() + contentView.getHeight()) {
@@ -1410,7 +1410,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
     private void createPromptNode() {
         if (promptNode == null && usePromptText.get()) {
             promptNode = new Text();
-            contentView.getChildren().add(0, promptNode);
+            contentView.getChildren().addFirst(promptNode);
             promptNode.setManaged(false);
             promptNode.getStyleClass().add("text");
             promptNode.visibleProperty().bind(usePromptText);
@@ -1551,8 +1551,8 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
     }
 
     private void updateFontMetrics() {
-        TextFlow textFlow = (TextFlow) paragraphNodes.getChildren().get(0);
-        Text firstParagraph = (Text)textFlow.getChildren().get(0);
+        TextFlow textFlow = (TextFlow) paragraphNodes.getChildren().getFirst();
+        Text firstParagraph = (Text)textFlow.getChildren().getFirst();
         lineHeight = Utils.getLineHeight(getSkinnable().getFont(), firstParagraph.getBoundsType());
         characterWidth = fontMetrics.get().getCharWidth('W');
         // Invalidate stable line height when font metrics change
@@ -1629,7 +1629,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 //        if (USE_MULTIPLE_NODES) {
 ////            throw new IllegalArgumentException("Multiple node traversal is not yet implemented.");
 //        }
-//        return (Text)paragraphNodes.getChildren().get(0);
+//        return (Text)paragraphNodes.getChildren().getFirst();
         for (Node child : paragraphNodes.getChildren()) {
             TextFlow textFlow = (TextFlow)child;
             for (Node textFlowChild : textFlow.getChildren()) {
@@ -1643,8 +1643,8 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                 }
             }
         }
-        TextFlow textFlow = (TextFlow) paragraphNodes.getChildren().get(0);
-        return (Text)textFlow.getChildren().get(0);
+        TextFlow textFlow = (TextFlow) paragraphNodes.getChildren().getFirst();
+        return (Text)textFlow.getChildren().getFirst();
     }
 
     /**
@@ -1741,7 +1741,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 
                 for (Node node : paragraphNodes.getChildren()) {
                     TextFlow textFlow = (TextFlow)node;
-                    Text paragraphNode = (Text)textFlow.getChildren().get(0);
+                    Text paragraphNode = (Text)textFlow.getChildren().getFirst();
                     String text = textFlow.getChildren().stream()
                             .map(n -> ((Text)n).getText())
                             .collect(Collectors.joining());
@@ -1786,7 +1786,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 //                            wrappingWidth,
 //                            paragraphNode.getBoundsType());
                     TextFlow textFlow = (TextFlow)node;
-                    Text paragraphNode = (Text)textFlow.getChildren().get(0);
+                    Text paragraphNode = (Text)textFlow.getChildren().getFirst();
                     String text = textFlow.getChildren().stream()
                             .map(n -> ((Text)n).getText())
                             .collect(Collectors.joining());
@@ -1916,7 +1916,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                 // Clear the extra line numbers
                 gutter.getChildren().remove(no, gutter.getChildren().size());
             }
-            double noBarWith = ((Label) gutter.getChildren().get(gutter.getChildren().size()-1)).getWidth();
+            double noBarWith = ((Label) gutter.getChildren().getLast()).getWidth();
             if (noBarWith < minBarWidth) {
                 noBarWith = minBarWidth;
             }
@@ -2025,13 +2025,13 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                     if (!foundCaretNode && caretPos >= textOffset) {
                         foundCaretNode = true;
                         caretTextFlow = textFlow;
-                        caretTextNode = (Text) textFlow.getChildren().get(0);
+                        caretTextNode = (Text) textFlow.getChildren().getFirst();
                         caretOffset = textOffset;
                     }
                     if (!codeArea.getErrorPosList().isEmpty()
                             && errorPosIndex > 0
                             && codeArea.getErrorPosList().get(errorPosIndex - 1) >= textOffset) {
-                        Text textNode = (Text) textFlow.getChildren().get(0);
+                        Text textNode = (Text) textFlow.getChildren().getFirst();
                         Integer errorPos = codeArea.getErrorPosList().get(--errorPosIndex);
                         updateErrorLine(textNode, errorPos, textOffset, textFlow);
                     }
@@ -2306,14 +2306,16 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                         int localEnd = highlightEnd - nodeStart;
                         PathElement[] pathElements = text.rangeShape(localStart, localEnd);
                         for (PathElement pathElement : pathElements) {
-                            if (pathElement instanceof MoveTo) {
-                                MoveTo moveTo = (MoveTo) pathElement;
-                                moveTo.setX(moveTo.getX() + text.getLayoutX() + textFlow.getLayoutX());
-                                moveTo.setY(moveTo.getY() + text.getLayoutY() + textFlow.getLayoutY());
-                            } else if (pathElement instanceof LineTo) {
-                                LineTo lineTo = (LineTo) pathElement;
-                                lineTo.setX(lineTo.getX() + text.getLayoutX() + textFlow.getLayoutX());
-                                lineTo.setY(lineTo.getY() + text.getLayoutY() + textFlow.getLayoutY());
+                            switch (pathElement) {
+                                case MoveTo moveTo -> {
+                                    moveTo.setX(moveTo.getX() + text.getLayoutX() + textFlow.getLayoutX());
+                                    moveTo.setY(moveTo.getY() + text.getLayoutY() + textFlow.getLayoutY());
+                                }
+                                case LineTo lineTo -> {
+                                    lineTo.setX(lineTo.getX() + text.getLayoutX() + textFlow.getLayoutX());
+                                    lineTo.setY(lineTo.getY() + text.getLayoutY() + textFlow.getLayoutY());
+                                }
+                                default -> { }
                             }
                         }
                         rangeHighlightPath.getElements().addAll(pathElements);
@@ -2354,14 +2356,16 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                     PathElement[] pathElements = textNode.rangeShape(start, end);
                     TextFlow textFlow = (TextFlow) textNode.getParent();
                     for (PathElement pathElement : pathElements) {
-                        if (pathElement instanceof MoveTo) {
-                            MoveTo moveTo = (MoveTo) pathElement;
-                            moveTo.setX(moveTo.getX() + textNode.getLayoutX() + textFlow.getLayoutX());
-                            moveTo.setY(moveTo.getY() + textNode.getLayoutY() + textFlow.getLayoutY());
-                        } else if (pathElement instanceof LineTo) {
-                            LineTo lineTo = (LineTo) pathElement;
-                            lineTo.setX(lineTo.getX() + textNode.getLayoutX() + textFlow.getLayoutX());
-                            lineTo.setY(lineTo.getY() + textNode.getLayoutY() + textFlow.getLayoutY());
+                        switch (pathElement) {
+                            case MoveTo moveTo -> {
+                                moveTo.setX(moveTo.getX() + textNode.getLayoutX() + textFlow.getLayoutX());
+                                moveTo.setY(moveTo.getY() + textNode.getLayoutY() + textFlow.getLayoutY());
+                            }
+                            case LineTo lineTo -> {
+                                lineTo.setX(lineTo.getX() + textNode.getLayoutX() + textFlow.getLayoutX());
+                                lineTo.setY(lineTo.getY() + textNode.getLayoutY() + textFlow.getLayoutY());
+                            }
+                            default -> { }
                         }
                     }
                     wordPath.getElements().addAll(pathElements);
